# object_detection

./: .gitignore  README.md  main.py  pyproject.toml
