[tool.poetry]
name = "object_detection"
version = "0.1.0"
description = ""
authors = ["Aleksandr Dubrovin <dubrovinmail@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
protobuf = "3.19.0"

[tool.poetry.dev-dependencies]
tensorflow = "2.4.0"
keras = "2.4.3"
numpy = "1.19.3"
opencv-python = "4.5.2.54"
imageai = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
